# pixel-contribution

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
analyze-pixel-maps/: index.html  package-lock.json  package.json  vite.config.ts
analyze-pixel-maps/rs-pixel-maps/: Cargo.toml
analyze-pixel-maps/src/: index.css  interpolate.ts  interpolation_error.ts  main.tsx  pixel_contrib.test.ts  pixel_contrib.ts  utils.test.ts  utils.ts
analyze-pixel-maps/src/components/: AngleInterpolationErrorViews.tsx  App.tsx  EquatorGraph.tsx  InterpolateAngleGraph.tsx  InterpolationErrorViews.tsx  PixelContribErrorViews.tsx  PixelContribView.tsx  PixelContribViews.tsx  SphereView.tsx
analyze_pixel_maps/: Cargo.toml  package-lock.json  package.json  tsconfig.json  webpack.config.js
analyze_pixel_maps/src/: analyze.ts  index.html  index.ts  main.rs  options.rs
doc/: paper.md
img/: camera_fit.drawio  octahedron_sphere.drawio  octaherdon_2d_projection.drawio  sphere_views.drawio
julia-analyze/: README.md  analyze.jl  run.jl
julia-analyze/AnalyzePixelContrib/: Project.toml
julia-analyze/AnalyzePixelContrib/src/: AnalyzePixelContrib.jl  contrib_maps.jl  octahedron.jl
julia-analyze/AnalyzePixelContrib/test/: runtests.jl
math/: Cargo.toml
math/src/: aabb.rs  bounding_sphere.rs  frustum.rs  lib.rs  plane.rs
pixel-contrib/: Cargo.toml
pixel-contrib-cli/: Cargo.toml
pixel-contrib-cli/src/: main.rs  options.rs
pixel-contrib-types/: Cargo.toml
pixel-contrib-types/src/: lib.rs
pixel-contrib/benches/: polygon_2d_bench.rs  screen_space_bench.rs
pixel-contrib/src/: camera_data.rs  colormap.rs  error.rs  lib.rs  main.rs  octahedron.rs  options.rs  pixel_contribution.rs  pixel_contribution_map.rs  polygon_2d.rs  ppm.rs  progress.rs  screen_space.rs  sphere.rs  view.rs
rasterizer/: Cargo.toml
rasterizer/src/: error.rs  lib.rs  utils.rs
rasterizer/src/render/: frame.rs  frame_buffer.rs  mod.rs  page.rs  simple_rasterizer.rs
rasterizer/src/scene/: geometry.rs  mod.rs
rasterizer/src/scene/compressed/: integer_trait.rs  mod.rs  positions.rs  quantization.rs
rasterizer/src/spatial/: mod.rs  simple.rs
rasterizer/tests/: test_rasterizer.rs
rasterizer/tests/common/: mod.rs  test_scenario.rs
render-lib/: Cargo.toml
render-lib/src/: datatype.rs  draw.rs  error.rs  framebuffer.rs  gl_call.rs  gpu_buffer.rs  gpu_mesh.rs  lib.rs  renderbuffer.rs  resource.rs  shader.rs  texture.rs
render-lib/src/camera/: camera_data.rs  mod.rs
render-lib/src/ui/: mod.rs  shape.rs  widget.rs
render-lib/src/ui/shader/: basic.frag  basic.vert  mod.rs
render-lib/src/viewer/: canvas.rs  event_handler.rs  mod.rs  renderer.rs
rs-analyze-pixel-maps/: Cargo.toml
rs-analyze-pixel-maps/src/: equator_graph.rs  interpolate.rs  lib.rs  polar_coodinates.rs  sphere_interpolate.rs
src/: main.rs  options.rs  stats.rs
src/math/: aabb.rs  mod.rs
src/render/: frame.rs  frame_buffer.rs  mod.rs  page.rs  simple_rasterizer.rs
src/scene/: geometry.rs  mod.rs  scene.rs
src/scene/compressed/: positions.rs  quantization.rs
src/spatial/: simple.rs
test_data/models/: 2Boxes.glb  antenna.glb  cylinder.off  plane_xy.glb  plane_yz.glb  s9_16.glb  s9_18.glb  s9_19.glb
viewer/: Cargo.toml
viewer/shader/: model.frag  model.vert  simple.frag  simple.vert  sphere.frag  sphere.vert
viewer/src/: cad_model.rs  geometry.rs  logging.rs  main.rs  options.rs  polygon_2d.rs  screen_space.rs  screenspace.rs  sphere.rs
