[package]
name = "analyze_pixel_maps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixel-contrib = { path = "../pixel-contrib" }
log = "0.4"
anyhow = "1.0"
nalgebra-glm = "0.18"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
chrono = { version = "0.4" }
plotters = "0.3"
