[package]
name = "pixel-contrib-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasterizer = { path = "../rasterizer" }
pixel-contrib = { path = "../pixel-contrib" }
pixel-contrib-types = { path = "../pixel-contrib-types" }
log = "0.4"
anyhow = "1.0"
nalgebra-glm = "0.18"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
chrono = { version = "0.4" }
image = "0.25"
