[package]
name = "pixel-contrib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasterizer = { path = "../rasterizer" }
log = "0.4"
nalgebra-glm = "0.18"
image = "0.24"
quick-error = "2.0"

[dev-dependencies]
cad_import = "0.3.1"
