[package]
name = "pixel-contrib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math = { path = "../math" }
rasterizer = { path = "../rasterizer" }
log = "0.4"
nalgebra-glm = "0.18"
image = "0.24"
quick-error = "2.0"
colorgrad = "0.6"
rayon = "1.8"
thread_local = "1.1"
byteorder = "1"

[dev-dependencies]
cad_import = "0.3.1"
arrayvec = "0.7"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "polygon_2d_bench"
harness = false

[[bench]]
name = "screen_space_bench"
harness = false
