[package]
name = "rasterizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
nalgebra-glm = "0.18"
cad_import = "0.3.1"
lazy_static = "1.4"
num = "0.4"
byte-slice-cast = "1.2"
quick-error = "2.0"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
