[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rasterizer = { path = "../rasterizer" }
render-lib = { path = "../render-lib" }
pixel-contrib = { path = "../pixel-contrib" }
pixel-contrib-types = { path = "../pixel-contrib-types" }
math = { path = "../math" }
cad_import = "0.3.1"
log = "0.4"
anyhow = "1.0"
nalgebra-glm = "0.18"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
chrono = "0.4"
